--- a/medicenter/index.html
+++ b/medicenter/index.html
@@ -4,6 +4,18 @@
     <meta name="viewport" content="width=decive-width,user-scalable=0" />
 
     <link rel ="stylesheet" type ="text/css" href="assets/css/template.css" />
+
+    <script type ="text/javascript">
+     window.onload = function(){
+      document.querySelector(".menuMobile").addEventListener("click", function(){
+        if(document.querySelector(".menu nav ul").style.display == 'flex') {
+          document.querySelector(".menu nav ul").style.display = 'none';
+        } else {
+          document.querySelector(".menu nav ul").style.display = 'flex';
+        }
+      });
+    };
+    </script>
     
     <title>MediCenter</title>
 
@@ -16,12 +28,19 @@
         </div>
         <div class="menu">
             <nav>
+                <div class="menuMobile">
+                    <div class="mm_line"></div>
+                    <div class="mm_line"></div>
+                    <div class="mm_line"></div>
+                </div>
                 <ul>
                     <li class="active"><a href="">HOME</a></li>
-                    <li><a href="">HOME</a></li>
-                    <li><a href="">HOME</a></li>
-                    <li><a href="">HOME</a></li>
-                    <li><a href="">HOME</a></li>
+                    <li><a href="">Blog</a></li>
+                    <li><a href="">Pages</a></li>
+                    <li><a href="">Departments</a></li>
+                    <li><a href="">Timetable</a></li>
+                    <li><a href="">Gallery</a></li>
+                    <li><a href="">Contact</a></li>
                 </ul>
             </nav>
         </div>
@@ -48,13 +67,19 @@
             </div>
             <div class="banner3">
                 <div class="banner_title">Opening Hours</div>
-                <div class="banner_OP">Monday - Friday</div>
-                    <div class="banner_time_op">8:00 - 17:00</div>
-                <div class="banner_OP">Saturday</div>
-                    <div class="banner_time_op">9:30 - 17:30</div>
-                <div class="banner_OP">Sunday</div>
-                    <div class="banner_time_op">9:30 - 15:00</div> 
+                <div style="margin-top: 10px;" class="banner_line1">
+                  <div class="banner_day">Monday - Friday</div>
+                  <div class="banner_hour">08:00 - 17:00</div>
                 </div>
+                <div style="margin-top: 10px;" class="banner_line">
+                  <div class="banner_day">Saturday</div>
+                  <div class="banner_hour">09:30 - 17:30</div>
+                </div>
+                <div style="margin-top: 10px;" class="banner_line">
+                  <div class="banner_day">Sunday</div>
+                  <div class="banner_hour">09:30 - 15:00</div>
+                </div>
+              </div>
          </div>
 
     </div>
@@ -65,7 +90,7 @@
         <section>
             <div class="widget">
                 <div class="widget_title">
-                    <div class="widget_title_text">Lastest News</div>
+                    <div class="widget_title_text" id="LW">Lastest News</div>
                     <div class="widget_title_bar"></div>
             </div>
                 <div class="widget_body flex">
@@ -161,55 +186,130 @@
 </section>
 <footer>
     <div class="container flexColumn">
-        <div class="footer_menu">
-            <div class="fm_1">
-                ...
-            </div>
-            <div class="fm_2">
-                ...
-            </div>
-            <div class="fm_3">
-                ...
-            </div>
+      <div class="footer_menu">
+        <div class="fm_1">
+          <div class="footer_title">Health Insurance</div>
+          <div class="footer_desc">
+            <a href="">Here in medicenter we have individual</a> &rarr;
+          </div>
         </div>
-        <div class="footer_area">  
-            <div class="footer_areaitem">
-                <div class="widget">
-                    <div class="widget_title">
-                        <div class="widget_title_text">MediCenter Clinic</div>
-                        <div class="widget_title_bar"></div>
-                </div>
-                    <div class="widget_body">
-                        ...
-                </div>
-            </div>
-            <div class="footer_areaitem">
-                <div class="widget">
-                    <div class="widget_title">
-                        <div class="widget_title_text">Lastest Posts</div>
-                        <div class="widget_title_bar"></div>
-                </div>
-                    <div class="widget_body">
-                        ...
-                </div>
-            </div>
-            <div class="footer_areaitem">
-                <div class="widget">
-                    <div class="widget_title">
-                        <div class="widget_title_text">Lastest Tweets</div>
-                        <div class="widget_title_bar"></div>
-                </div>
-                    <div class="widget_body">
-                        ...
-                </div>
-            </div>
+        <div class="fm_2">
+          <div class="footer_title">Medical Records</div>
+          <div class="footer_desc">
+            <a href="">Here in medicenter we have individual</a> &rarr;
+          </div>
         </div>
-        <div class="footer_copy">
-            &copy Copyright - Todos os direitos reservados
+        <div class="fm_3">
+          <div class="footer_title">Online Bill Pay</div>
+          <div class="footer_desc">
+            <a href="">Here in medicenter we have individual</a> &rarr;
+          </div>
         </div>
-
-    </div>
-</footer>
+      </div>
+      <div class="footer_area">
+        <div class="footer_area_1">
+          <div class="widget">
+            <div class="widget_title">
+              <div class="widget_title_text">Medicenter Clinic</div>
+              <div class="widget_title_bar"></div>
+            </div>
+            <div class="widget_footer_body">
+              <div class="widget_footer_area_1">
+                Mauris adipiscing mauris fringilla turpis interdum sed
+                pulvinar nisi malesuada individual.
+  
+              </div>
+              <div class="widget_footer_area_2">
+                <div class="widget_footer_column">
+                  <br>
+                  Medicenter Clinic <br>
+                  33 Farlane Street <br>
+                  Keilor East <br>
+                  VIC 3033, Australia
+                </div>
+                <div class="widget_footer_column">
+                  <br><br>
+                  +123 655 655 <br>
+                  +123 755 755 <br>
+                  <a href="mailto:medicenter@mail.com">medicenter@mail.com</a>
+                </div>
+              </div>
+              <div class="social_media">
+                <a href="https://facebook.com" target="_blank">
+                  <img src="./assets/images/facebook_logo.png" alt="">
+                </a>
+                <a href="https://instagram.com" target="_blank">
+                  <img src="./assets/images/instagram_logo.png" alt="">
+                </a>
+                <a href="https://twitter.com/" target="_blank">
+                  <img src="./assets/images/twitter_logo.png" alt="">
+                </a>
+                <a href="https://wa.me/+5524981544773" target="_blank">
+                  <img src="./assets/images/whatsapp_logo.png" alt="">
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="footer_area_2">
+          <div class="widget">
+            <div class="widget_title">
+              <div class="widget_title_text">Latest Posts</div>
+              <div class="widget_title_bar"></div>
+            </div>
+            <div class="widget_body flex">
+              <ul>
+                <li>
+                  <a href="">Mauris adipiscing mauris fringilla turpis
+                  interdum sed pulvinar nisi malesuada.</a>
+                <p>2 hours ago</p>
+                <li>
+                  <a href="">Lorem ipsum dolor sit amat velum.</a>
+                  <p>1 day ago</p>
+                <li>
+                  <a href="">Mauris adipiscing mauris fringilla turpis
+                  interdum sed pulvinar nisi malesuada.</a>
+                  <p>2 weeks ago</p>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <div class="footer_area_3">
+          <div class="widget">
+            <div class="widget_title">
+              <div class="widget_title_text" style="color: white;">Latest Tweets</div>
+              <div class="widget_title_bar"></div>
+            </div>
+            <div class="widget_body flex">
+              <ul>
+                <li>
+                  We proudly present SwimAcademy WordPress
+                  Theme <a href="">t.co/7bomogbu6s</a>, dedicated to swimming schools
+                  and trainers… <a href="">t.co/bFqiw4AY6w</a>
+                  <p>2 weeks ago</p>
+                <li>
+                  We've released new version (v6.8) of our #Timetable #Responsive
+                  #Booking #Schedule #WP Plugin. Please check at… <a href="">t.co/hdxFfHD5NK</a>
+                  <p>2 months ago</p>
+                <li>
+                  We have released new version (v6.1) of our Prestige #Portfolio
+                  #CV #vCard #WordPress #Theme Check at #ThemeForest <a href="">t.co/0jRV18Ce6x</a>
+                  <p>3 months ago</p>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="footer_copyright">
+        <div class="copy_1">
+        &copy; Copyright - <a href="">Medicenter Template Project</a>
+         by <a href="https://github.com/Vinigoulartsl" target="_blank">Vinícius Goulart</a>
+        </div>
+        <div class="copy_2">
+         <a href="#topo">Top</a> &uarr;
+        </div>
+      </div>
+  </footer>
 
 </body>
 </html>
