Atualização do HTML,CSS, inserção de Icons e ajuste de resposividade

--- a/medicenter/index.html
+++ b/medicenter/index.html
@@ -1,4 +1,5 @@
-<html>
+<!DOCTYPE html>
+<html lang = "pt-br">
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=decive-width,user-scalable=0" />
@@ -22,6 +23,7 @@
 </head>
 <body>
 <header>
+  <span id="topo"></span>
     <div class="container">
         <div class="logo">
             <a href=""><img src="assets/images/logo.png" /></a>
@@ -107,7 +109,13 @@
                                 Lorem Ipsum dolor sit amat velum
                             </div>
                             <div class="news_resume">
-                                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+                                Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
+                                Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
+                                when an unknown printer took a galley of type and scrambled it to make a type specimen book. 
+                                It has survived not only five centuries, but also the leap into electronic typesetting, 
+                                remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset 
+                                sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus
+                                 PageMaker including versions of Lorem Ipsum.
                             </div>
                         </a>
                     </article>
@@ -162,24 +170,75 @@
                             </div>
                         </a>
                     </article>  
+                    <section>
+                      <div class="page_blog">
+                        <a href="">Show all &#10230</a>
+                      </div>
+                    </section>
             </div>
         </section>
         <aside>
-            <div class="widget">
+            <div class="widget departs">
                 <div class="widget_title">
                     <div class="widget_title_text">Departaments</div>
                     <div class="widget_title_bar"></div>
             </div>
-                <div class="widget_body"> 
-                  
-                </div>
-            <div class="widget">
-                <div class="widget_title">
-                    <div class="widget_title_text">Make An Appointment</div>
-                    <div class="widget_title_bar"></div>
+            <div class="widget_body_departs">
+              <a href class="widget_departs">
+                <img src="assets/images/brain.png" alt="">
+              </a>
+              <a href="" class="widget_departs">
+                <img src="assets/images/teddy-bear.png" alt="">
+              </a>
+              <a href="" class="widget_departs">
+                <img src="assets/images/cardiology.png" alt="">
+              </a>
+              <a href="" class="widget_departs">
+                <img src="assets/images/sexual-health.png" alt="">
+              </a>
+              <a href="" class="widget_departs">
+                <img src="assets/images/ophtalmology.png" alt="">
+              </a>
+              <a href="" class="widget_departs">
+                <img src="assets/images/tooth.png" alt="">
+              </a>
             </div>
-                <div class="widget_body">
-                    ...
+            <div class="widget">
+              <div class="widget_title">
+                <div class="widget_title_text">Make An Appointment</div>
+                <div class="widget_title_bar"></div>
+              </div>
+              <div class="widget_body">
+                <div class="widget_body_title">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                  Ut volutpat rutrum eros sit amet sollicitudin.
+                </div>
+                <div class="widget_body_contacts">
+                  <div class="icon">
+                    <img src="assets/images/telefone_icon.png">
+                  </div>
+                  <a class="tel" href="tel:+1-800-643-4300">
+                    by phone: <b style="color: black;">1-800-643-4300</b>
+                  </a>
+                </div>
+                <div class="widget_body_contacts">
+                  <div class="icon">
+                    <img src="assets/images/email_icon.png">
+                  </div>
+                  <mytag>by e-mail:</mytag>
+                  <a href="mailto:madicenter@mail.com">
+                    medicenter@mail.com
+                  </a>
+                </div>
+                <div class="widget_body_contacts">
+                  <div class="icon">
+                    <img src="assets/images/form_icon.png">
+                  </div>
+                  <mytag>or</mytag>
+                  <a href="">fill in the form</a>
+                  &nbsp;on our contact page
+                </div>
+              </div>
             </div>
         </aside>
     </div>
@@ -210,7 +269,7 @@
         <div class="footer_area_1">
           <div class="widget">
             <div class="widget_title">
-              <div class="widget_title_text">Medicenter Clinic</div>
+              <div class="widget_title_text" style="color: white;">Medicenter Clinic</div>
               <div class="widget_title_bar"></div>
             </div>
             <div class="widget_footer_body">
@@ -254,7 +313,7 @@
         <div class="footer_area_2">
           <div class="widget">
             <div class="widget_title">
-              <div class="widget_title_text">Latest Posts</div>
+              <div class="widget_title_text" style="color: white;">Latest Posts</div>
               <div class="widget_title_bar"></div>
             </div>
             <div class="widget_body flex">
