--- a/homenagem page/index.html
+++ b/homenagem page/index.html
@@ -14,16 +14,16 @@
             <div align="center" class="icon">
                 <a href=""><img src="assets/images/joker_icon.png" /></a>
             </div>
-            <div align="center" class="content">
+        <div align="center" class="content">
             <div class="title">
                 <h1>Heath Ledger</h1> 
-                <h2>Heathcliff Andrew Ledger, ou apenas Heath Ledger como era conhecido foi um ator,
-                    que ficou muito conhecido por interpretar o vilão coringa no cinema. </h2>
+                <h2>Heathcliff Andrew Ledger ou apenas Heath Ledger como era conhecido, foi um ator australiano
+                    que ficou muito conhecido por interpretar o vilão coringa no filme "Batman - O Cavaleiro das Trevas". </h2>
                 <p>(Perth - Austrália, 4 de abril de 1979 - Nova York - EUA, 22 de janeiro de 2008)</p>
              </div>
              <div class="heath1">
                 <img src="assets/images/heath1.jpg" />
-                <div class="legenda-img">Legder em um ensaio fotográfico.</div>
+                <div class="legenda-img">Heath Legder em um ensaio fotográfico.</div>
              </div>
              <div class="vida_heath">
                 <h1 id="vida_prof">Vida profissional</h1>
@@ -32,10 +32,53 @@
                 <p>Em 1996, antes de fazer a sua estreia no cinema australiano em Blackrock, envolveu-se em Roar, uma série de duração curta da Fox Broadcasting Company. Em 1999, o australiano estrelou no drama adolescente 10 Things I Hate About You, e começou a ganhar visibilidade nos Estados Unidos da América. Também naquele ano estrelou no aclamado filme australiano Two Hands.</p>
                 <h2 class="h2">Anos 2000</h2>
                 <p>De 2000 até 2005, Ledger estrelou, ao lado do ator Mel Gibson, The Patriot, e outros filmes Monster's Ball, A Knight's Tale, The Four Feathers, Ned Kelly, The Order e The Brothers Grimm. Em 2001, ganhou o prémio ShoWest de "Futura Estrela Masculina" com base nas suas performances em The Patriot e A Knight's Tale.</p>
-                <p>Em 2005, recebeu o prémio de melhor ator do Círculo de Críticos de Cinema das cidades de Nova Iorque e de São Francisco pelo seu aclamado desempenho no filme Brokeback Mountain, de Ang Lee. Neste, havia interpretado um cowboy chamado Ennis Del Mar que se apaixona por Jack Twist, interpretado por Jake Gyllenhaal. Por esta performance, recebeu também indicações para os prémios de melhor ator nos BAFTA, Globos de Ouro, SAG e Oscar</p>
-                <p>Ledger interpretou o Coringa / Joker, maior vilão das histórias em quadrinhos / banda desenhada de Batman, em The Dark Knight, de 2008, do qual recebeu, no dia 23 de fevereiro de 2009, o prêmio póstumo Oscar na categoria de melhor ator coadjuvante um ano após a sua morte. O filme teve estreia em 18 de Julho de 2008, e, por já estar em etapa de pós-produção após a morte do ator, não sofreu alterações. Sua campanha de marketing viral, no entanto, por ser até então centrada na interpretação de Ledger, passou a retratar outros elementos do filme</p>
+                <p>Em 2005, recebeu o prémio de melhor ator do Círculo de Críticos de Cinema das cidades de Nova Iorque e de São Francisco pelo seu aclamado desempenho no filme Brokeback Mountain, de Ang Lee. Neste, havia interpretado um cowboy chamado Ennis Del Mar que se apaixona por Jack Twist, interpretado por Jake Gyllenhaal. Por esta performance, recebeu também indicações para os prémios de melhor ator nos BAFTA, Globos de Ouro, SAG e Oscar.</p>
             </div>
-            </div>
+            <section>
+                <div class="joker">
+                    <article>
+                        <div class="final-content">
+                            <div><h1>O Coringa</h1>
+                            <p>No dia 1 de Agosto de 2006, Heath Ledger foi confirmado para o papel de coringa na trilogia do Batman de Cristopher Nolan, inicialmente muito criticado por só ter feito papeis em filmes românticos, os criticos não acreditavam que ele pudesse entregar uma boa atuação na pele do palhaço de Gotham.</p>
+                            <p>Ledger interpretou o Coringa, maior vilão das histórias em quadrinhos do Batman, em The Dark Knight, de 2008, do qual recebeu, no dia 23 de fevereiro de 2009, o prêmio póstumo Oscar na categoria de melhor ator coadjuvante um ano após a sua morte.
+                                O filme teve estreia em 18 de Julho de 2008, e, por já estar em etapa de pós-produção após a morte do ator, não sofreu alterações. Sua campanha de marketing viral, no entanto, por ser até então centrada na interpretação de Ledger, passou a retratar outros elementos do filme.
+                            </p></div>
+                            <div><img src="assets/images/joker1.png"></div>
+                        </div>
+                    </article>
+                    </div>
+                </div>
+            </section>
+            <section>
+                <div class="joker2">
+                    <article>
+                        <div class="final-content2">
+                            <div><img src="assets/images/oscar.png"></div>
+                            <div><h1>Oscar</h1>
+                            <p>Ledger foi indicado ao Oscar pela primeira vez em 2006, pelo filme O Segredo de Brokeback Mountain, este qual interpretou </p>
+                            <p>Ledger interpretou o Coringa, maior vilão das histórias em quadrinhos do Batman, em The Dark Knight, de 2008, do qual recebeu, no dia 23 de fevereiro de 2009, o prêmio póstumo Oscar na categoria de melhor ator coadjuvante um ano após a sua morte.
+                                O filme teve estreia em 18 de Julho de 2008, e, por já estar em etapa de pós-produção após a morte do ator, não sofreu alterações. Sua campanha de marketing viral, no entanto, por ser até então centrada na interpretação de Ledger, passou a retratar outros elementos do filme.
+                            </p></div>
+                        </div>
+                    </article>
+                    </div>
+                </div>
+            </section>
         </div>
-</header>    
+    
+        </div>
+</header> 
+<footer>
+    <div class="">
+
+    </div>
+    <div class="copy_1">
+        &copy; Copyright - Tributo feito por
+         <a href="https://github.com/Vinigoulartsl" target="_blank">Vinícius Goulart</a>,
+            para mais informações acesse em 
+         <a href="https://pt.wikipedia.org/wiki/Heath_Ledger" target="_blank">Wikipedia</a>.
+        </div>
+</footer>   
 </body>
+
+</html>
