Finalização do Layout da página homenagem

--- a/homenagem page/index.html
+++ b/homenagem page/index.html
@@ -26,7 +26,7 @@
                 <div class="legenda-img">Heath Legder em um ensaio fotográfico.</div>
              </div>
              <div class="vida_heath">
-                <h1 id="vida_prof">Vida profissional</h1>
+                <h1 id="vida_prof">Tragetória</h1>
                 <h2>Anos 90</h2>
                 <p>Aos 16 anos de idade, Ledger fez exames de graduação rápida no ensino médio e partiu para Sydney com o melhor amigo, Trevor DiCarlo, para tentar consolidar-se como ator. Voltou para Perth para atuar como um ciclista homossexual na série de televisão Sweat, de 1996.</p>
                 <p>Em 1996, antes de fazer a sua estreia no cinema australiano em Blackrock, envolveu-se em Roar, uma série de duração curta da Fox Broadcasting Company. Em 1999, o australiano estrelou no drama adolescente 10 Things I Hate About You, e começou a ganhar visibilidade nos Estados Unidos da América. Também naquele ano estrelou no aclamado filme australiano Two Hands.</p>
@@ -50,18 +50,23 @@
                 </div>
             </section>
             <section>
-                <div class="joker2">
-                    <article>
-                        <div class="final-content2">
-                            <div><img src="assets/images/oscar.png"></div>
-                            <div><h1>Oscar</h1>
-                            <p>Ledger foi indicado ao Oscar pela primeira vez em 2006, pelo filme O Segredo de Brokeback Mountain, este qual interpretou </p>
-                            <p>Ledger interpretou o Coringa, maior vilão das histórias em quadrinhos do Batman, em The Dark Knight, de 2008, do qual recebeu, no dia 23 de fevereiro de 2009, o prêmio póstumo Oscar na categoria de melhor ator coadjuvante um ano após a sua morte.
-                                O filme teve estreia em 18 de Julho de 2008, e, por já estar em etapa de pós-produção após a morte do ator, não sofreu alterações. Sua campanha de marketing viral, no entanto, por ser até então centrada na interpretação de Ledger, passou a retratar outros elementos do filme.
-                            </p></div>
-                        </div>
-                    </article>
-                    </div>
+            <div class="mds">
+                <div class="final_content_2">
+                    <img src="assets/images/oscar.png"></div>
+                <div class="final_content_2_1">
+                    <h1>Oscar</h1>
+                    <p>Heath Ledger teve sua primeira indicação ao Oscar em 2006, pelo filme O Segredo de Brokeback Mountain, filmes esse que protagonizou ao lado de Jake Gyllenhaal. Porém, na ocasião ele ficou em 5º lugar, logo atrás de Joaquin Phoenix.</p>
+                    <p>Dois anos depois, Ledger foi mais uma vez indicado ao Oscar, dessa vez como ator coadjuvante por seu papel em Batman - O Cavaleiro das Trevas. Conquistando assim sua primeira e única estatueta dourada, pois, infelizmente o ator havia morrido cerca de 6 meses antes da premiação.</p>
+                </div>
+            </div>
+            </section>
+            <section>
+                <div class="death">
+                  <h1>Morte</h1>
+                  <p>Segundo a empregada Teresa Solomon, ela entrou no apartamento do ator, situado no bairro de SoHo em Nova Iorque, aproximadamente às 12h30min do dia 22 de janeiro de 2008, com sua própria chave, para seu trabalho habitual. Por volta das 13h00min, foi trocar uma lâmpada no quarto de Ledger e percebeu que ele ainda estava deitado; como o ouviu roncar, imaginou que não havia nada errado e deixou o quarto.</p>  
+                  <p>Às 14h45min, a massagista Diana Wolozin apareceu para sua sessão agendada com o ator. Como Diana e a empregada não obtiveram resposta ao bater na porta do quarto de Ledger, a massagista resolveu entrar e tentar acordar Ledger, que segundo depoimento dado a polícia, já estava frio a esta altura.</p>
+                    <p>A polícia trabalhou principalmente com duas hipóteses para a causa da morte prematura do ator: suicídio e overdose acidental. Após duas semanas de investigação, o serviço de medicina legal de Nova Iorque concluiu que a causa da morte havia sido por intoxicação acidental de remédios prescritos (oxicodona, hidrocodona, diazepam, temazepam, alprazolam e doxilamina) com efeito calmante e sonífero.</p>
+                    <p>O funeral de Ledger aconteceu em sua cidade natal, Perth, no dia 9 de fevereiro de 2008. Após o funeral, que durou cerca de 90 minutos, foi realizada sua cremação, assistida apenas por dez familiares do ator. Suas cinzas foram dispersas na praia. Depois disso, seus parentes e amigos mergulharam no mar para realizar uma homenagem ao ator.</p>
                 </div>
             </section>
         </div>
