--- a/homenagem page/index.html
+++ b/homenagem page/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="widht-decive-width, user-scalable=0" />
+    <meta name="viewport" content="width-decive-width, user-scalable=0" />
 
     <link rel ="stylesheet" type ="text/css" href="assets/css/style.css" />
 
