--- a/projetoAwax/index.html
+++ b/projetoAwax/index.html
@@ -36,7 +36,7 @@
                 <div class="slidearea">
                     <h1>Design is about<br/><span>Communication</span></h1>
                     <h2>Ligue para nós: + 00 1234 5678</h2>
-                    <a href="">Entre em contato</a>
+                    <a href="" class="button">Entre em contato</a>
                 </div>
             </div>
             <div class="slide">
@@ -47,13 +47,24 @@
             </div>
         </div>
     </section>
+
     <section class="default light">
-        <div class="section-title">Título</div>
-        <div class="section-desc">Descrição</div>
+        <div class="section-title">Sobre nós</div>
+        <div class="section-desc">Quem nós somos?</div>
         <div class="section-body">
-            Corpo
+            <div class="section-aboutus">
+                <div class="section-aboutus--left">
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+                    <br/>
+                    <a href="" class="button">Ler mais</a>
+                </div>
+                <div class="section-aboutus--right">
+                    <img src="media/foto6.jpg" />
+                </div>
+            </div>
         </div>
     </section>
+
     <section class="default dark">
         <div class="section-title">Título</div>
         <div class="section-desc">Descrição</div>
